Fixes styling issue on mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,8 +1,8 @@
 header {
   background: #d1eaf3;
-  height: 120px;
+  height: auto;
   margin-top: 0;
-  padding-top: 15px;
+  padding: 20px 0;
   text-align: center;
   width: 100%;
 }
